got simple master detail linking working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">QuizDroid</string>
+
+    <!-- Activity Titles -->
+    <string name="title_activity_topic_overview">TopicOverviewActivity</string>
+
+    <!-- Text -->
+    <string name="submit_text">Submit</string>
 </resources>
