--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="finish_text">Finish</string>
     <string name="submit_text">Submit</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="preferences">Preferences</string>
+
+    <string name="activity_topic_list_title">Topic List</string>
+    <string name="activity_quiz_title">Quiz Lyfe</string>
 </resources>
